--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -165,7 +165,7 @@
                 &__image{
                   width: 188px;
                   height: 188px;
-                  background-image: url(test_content);
+                  // background-image: url(test_content);
                 }
               }
             }
@@ -178,10 +178,10 @@
   .sumaho{
     max-width: 100%;
     height: 300px;
-    padding: 51px 0px 0px;
+    padding: 51px 0px 0px 0px;
     img.bottom__image1 {
       max-width: 100%;
-      position: absolute; top:6356px;
+      // position: absolute; top:6356px;
       height: 300px;
       margin: 50px,0px;
       padding: 0px;
