--- a/app/views/shared/_contents.html.haml
+++ b/app/views/shared/_contents.html.haml
@@ -6,8 +6,8 @@
       %a.item__top__mottomiru もっと見る
     .box
       .box__contents
-        = render partial: 'shared/content'
-        = render partial: 'shared/content'
+        -# = render partial: 'shared/content'
+        -# = render partial: 'shared/content'
 
 .new
   .item
@@ -17,8 +17,8 @@
       %a.item__top__mottomiru もっと見る
     .box
       .box__contents
-        = render partial: 'shared/content'
-        = render partial: 'shared/content'
+        -# = render partial: 'shared/content'
+        -# = render partial: 'shared/content'
 
 .new
   .item
@@ -28,8 +28,8 @@
       %a.item__top__mottomiru もっと見る
     .box
       .box__contents
-        = render partial: 'shared/content'
-        = render partial: 'shared/content'
+        -# = render partial: 'shared/content'
+        -# = render partial: 'shared/content'
 
 .new
   .item
@@ -39,5 +39,5 @@
       %a.item__top__mottomiru もっと見る
     .box
       .box__contents
-        = render partial: 'shared/content'
-        = render partial: 'shared/content'
+        -# = render partial: 'shared/content'
+        -# = render partial: 'shared/content'
