--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,9 +1,8 @@
 .single-container
-  = render 'shared/sub_header'
   %main.single-main
     %section.l-single-container
       %h2.l-single-head 商品の情報を入力
-      = form_for [@user, @picture, @item] do |f|
+      = form_for @item do |f|
         .sell-box
           %h3.uploud-header 出品画像
           %span.form-require 必須
@@ -12,10 +11,9 @@
             .uploud-container
               .uploud-container__have-items
             .uploud-dropbox
-              = f.label :name, class: 'form__mask__image' do
-                = f.file_field :name, class: 'uploud-dropfile'
-                %br/
-                %pre.visible-pc ドラッグアンドドロップまたはクリックしてファイルをアップロード
+              = f.file_field :name,class: 'uploud-dropfile'
+              %br/
+              %pre.visible-pc ドラッグアンドドロップまたはクリックしてファイルをアップロード
         .sell-content.clearfix
           .form-group.first-box
             = f.label :商品名
@@ -44,8 +42,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  %select.select-default
-                    = f.select :name,[  ]
+                  = f.select :name,[ ['---','0'],['新品、未使用','1'],['未使用に近い','2'],['目立った傷や汚れなし','3'],['やや傷や汚れあり','4'],['傷や汚れあり','5'],['全体的に状態が悪い','6'] ]
         .sell-content.clearfix
           %h3.sub-header 配送について
           = link_to '?','/jp/help_center/article/68/',class: 'form-question'
@@ -56,15 +53,14 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :name,[  ]
+                  = f.select :name,[ ['---','0'],['送料込み（出品者負担）','1'],['着払い負担（購入者負担）','2'] ]
             .form-group
               = f.label :配送元の地域
               %span.form-require 必須
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  %select.select-default
-                    = f.select :name,[  ]
+                  = f.select :name,[ ['---','---'],['北海道','北海道'],['青森県','青森県'],['岩手県','岩手県'],['宮城県','宮城県'],['秋田県','秋田県'],['山形県','山形県'],['福島県','福島県'],['茨城県','茨城県'],['栃木県','栃木県'],['群馬県','群馬県'],['埼玉県','埼玉県'],['千葉県','千葉県'],['東京都','東京都'],['神奈川県','神奈川県'],['新潟県','新潟県'],['富山県','富山県'],['石川県','石川県'],['福井県','福井県'],['山梨県','山梨県'],['長野県','長野県'],['岐阜県','岐阜県'],['静岡県','静岡県'],['愛知県','愛知県'],['三重県','三重県'],['滋賀県','滋賀県'],['京都府','京都府'],['大阪府','大阪府'],['兵庫県','兵庫県'],['奈良県','奈良県'],['和歌山県','和歌山県'],['鳥取県','鳥取県'],['島根県','島根県'],['岡山県','岡山県'],['広島県','広島県'],['山口県','山口県'],['徳島県','徳島県'],['香川県','香川県'],['愛媛県','愛媛県'],['高知県','高知県'],['福岡県','福岡県'],['佐賀県','佐賀県'],['長崎県','長崎県'],['熊本県','熊本県'],['大分県','大分県'],['宮崎県','宮崎県'],['鹿児島県','鹿児島県'],['沖縄県','沖縄県']]
             .form-group
               = f.label :発送までの日数
               %span.form-require 必須
@@ -112,4 +108,3 @@
               に同意したことになります。
             = f.submit '出品する', class: 'btn-red'
             = f.submit 'もどる', class: 'btn-grey'
-  = render 'shared/sub_footer'
