add-side-ber-edit

--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -1,5 +1,6 @@
 .card-index-content {
   width: 700px;
+  background-color: white;
   h2 {
     font-size: 24px;
     padding: 8px 24px;
@@ -51,6 +52,7 @@
 
 .create-new-content {
   width: 652px;
+  background-color: white;
   h2 {
     font-size: 24px;
     padding: 8px 24px;
