--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -1,15 +1,18 @@
-.card-index-content
-  %h2 支払い方法
-  .card-index-inner
-    %section.card-index-inner__top
-      .top-content
-        %h3 クレジットカード一覧
-    %section.card-index-inner__middle
-      .content
-        =link_to "#", class: "content__btn" do
-          =fa_icon 'credit-card', class: 'content__btn__icon'
-          クレジットカードを追加する
-    .card-index-inner__bottom
-      =link_to "#", class: "content__line" do
-        %span 支払い方法について
-        =fa_icon 'chevron-right'
+%main.main__contents
+  = render "/shared/mypage-side-manu"
+  .main__contents__contents
+    .card-index-content
+      %h2 支払い方法
+      .card-index-inner
+        %section.card-index-inner__top
+          .top-content
+            %h3 クレジットカード一覧
+        %section.card-index-inner__middle
+          .content
+            =link_to "#", class: "content__btn" do
+              =fa_icon 'credit-card', class: 'content__btn__icon'
+              クレジットカードを追加する
+        .card-index-inner__bottom
+          =link_to "#", class: "content__line" do
+            %span 支払い方法について
+            =fa_icon 'chevron-right'
