--- a/app/views/users/information.html.haml
+++ b/app/views/users/information.html.haml
@@ -34,7 +34,7 @@
             %span.form-arbitrary 任意
             .form-group__select-wrap
               = fa_icon 'chevron-down', class:'form-group__select-wrap__icon'
-              = f.select :prefecture, [ ['-----','-----'], ['東京','東京'], ['福岡','福岡'] ],{},{class: 'select-default'}
+              = f.select :prefecture, [ ['-----','-----'], ['東京','東京'], ['福岡','福岡'],['沖縄','沖縄'] ],{},{class: 'select-default'}
           .form-group
             = f.label :市区町村
             %span.form-arbitrary 任意
