--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,7 +2,7 @@
   .inner
     .header-top
       %h1.logo
-        = link_to "#" do
+        = link_to "/" do
           %img{src: "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?3135490372", width: "150px"}
       
       .fuzzy_search
@@ -49,8 +49,6 @@
         - else
           %ul
             %li
-              = link_to "new_user_session_path", class: "user-new-btn" do
-                新規会員登録
+              = link_to "新規会員登録", users_signup_path, class: "user-new-btn"
             %li
-              = link_to "new_user_registration_path", class: "login-btn" do
-                ログイン
+              = link_to "ログイン", new_user_session_path, class: "login-btn"
