--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -10,22 +10,24 @@
           .dropbox-container.clearfix
             .uploud-container
               .uploud-container__have-items
-            .uploud-dropbox
-              = f.file_field :name,class: 'uploud-dropfile'
-              %br/
-              %pre.visible-pc ドラッグアンドドロップまたはクリックしてファイルをアップロード
+              = f.fields_for :pictures do |picture|
+                .uploud-dropbox
+                  = picture.file_field :name
+                  -# = picture.hidden_field :id, value: picture.object.id
+                  %br/
+                  %pre.visible-pc ドラッグアンドドロップまたはクリックしてファイルをアップロード
         .sell-content.clearfix
           .form-group.first-box
             = f.label :商品名
             %span.form-require 必須
             .input-box
-              = f.text_field :name,class: 'input-default', placeholder: '商品名（最大40文字まで）'
+              = f.text_field :name, class: 'input-default', placeholder: '商品名（最大40文字まで）'
               %br/
           .form-group
             = f.label :商品の説明
             %span.form-require 必須
             %br/
-            = f.text_field :name,class: 'textarea-default', placeholder: '商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）&#13;&#10;2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわ&#13;&#10;せやすいのでおすすめです。）'.html_safe
+            = f.text_field :description, class: 'textarea-default', placeholder: '商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）&#13;&#10;2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわ&#13;&#10;せやすいのでおすすめです。）'.html_safe
         .sell-content.clearfix
           %h3.sub-header 商品の詳細
           .form-box
@@ -35,14 +37,15 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :name,[ ['---','---'],['レディース','レディース'],['メンズ','メンズ'] ]
+                  = f.select :category_id,[ ['---',1],['レディース','2'],['メンズ','3'] ]
             .form-group
               = f.label :商品の状態
               %span.form-require 必須
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :name,[ ['---','0'],['新品、未使用','1'],['未使用に近い','2'],['目立った傷や汚れなし','3'],['やや傷や汚れあり','4'],['傷や汚れあり','5'],['全体的に状態が悪い','6'] ]
+                  -# = f.select :status ,["---","新品、未使用","未使用に近い","目立った傷や汚れなし","やや傷や汚れあり","傷や汚れあり","全体的に状態が悪い"]
+                  = f.select :status,[ ['---',1],['新品、未使用','1'],['未使用に近い','2'],['目立った傷や汚れなし','3'],['やや傷や汚れあり','4'],['傷や汚れあり','5'],['全体的に状態が悪い','6'] ]
         .sell-content.clearfix
           %h3.sub-header 配送について
           = link_to '?','/jp/help_center/article/68/',class: 'form-question'
@@ -53,22 +56,21 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :name,[ ['---','0'],['送料込み（出品者負担）','1'],['着払い負担（購入者負担）','2'] ]
+                  = f.select :responsibility,[ ['---',1],['送料込み（出品者負担）','2'],['着払い負担（購入者負担）','3'] ]
             .form-group
               = f.label :配送元の地域
               %span.form-require 必須
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :name,[ ['---','---'],['北海道','北海道'],['青森県','青森県'],['岩手県','岩手県'],['宮城県','宮城県'],['秋田県','秋田県'],['山形県','山形県'],['福島県','福島県'],['茨城県','茨城県'],['栃木県','栃木県'],['群馬県','群馬県'],['埼玉県','埼玉県'],['千葉県','千葉県'],['東京都','東京都'],['神奈川県','神奈川県'],['新潟県','新潟県'],['富山県','富山県'],['石川県','石川県'],['福井県','福井県'],['山梨県','山梨県'],['長野県','長野県'],['岐阜県','岐阜県'],['静岡県','静岡県'],['愛知県','愛知県'],['三重県','三重県'],['滋賀県','滋賀県'],['京都府','京都府'],['大阪府','大阪府'],['兵庫県','兵庫県'],['奈良県','奈良県'],['和歌山県','和歌山県'],['鳥取県','鳥取県'],['島根県','島根県'],['岡山県','岡山県'],['広島県','広島県'],['山口県','山口県'],['徳島県','徳島県'],['香川県','香川県'],['愛媛県','愛媛県'],['高知県','高知県'],['福岡県','福岡県'],['佐賀県','佐賀県'],['長崎県','長崎県'],['熊本県','熊本県'],['大分県','大分県'],['宮崎県','宮崎県'],['鹿児島県','鹿児島県'],['沖縄県','沖縄県']]
+                  = f.select :location,[ ['---','---'],['北海道','北海道'],['青森県','青森県'],['岩手県','岩手県'],['宮城県','宮城県'],['秋田県','秋田県'],['山形県','山形県'],['福島県','福島県'],['茨城県','茨城県'],['栃木県','栃木県'],['群馬県','群馬県'],['埼玉県','埼玉県'],['千葉県','千葉県'],['東京都','東京都'],['神奈川県','神奈川県'],['新潟県','新潟県'],['富山県','富山県'],['石川県','石川県'],['福井県','福井県'],['山梨県','山梨県'],['長野県','長野県'],['岐阜県','岐阜県'],['静岡県','静岡県'],['愛知県','愛知県'],['三重県','三重県'],['滋賀県','滋賀県'],['京都府','京都府'],['大阪府','大阪府'],['兵庫県','兵庫県'],['奈良県','奈良県'],['和歌山県','和歌山県'],['鳥取県','鳥取県'],['島根県','島根県'],['岡山県','岡山県'],['広島県','広島県'],['山口県','山口県'],['徳島県','徳島県'],['香川県','香川県'],['愛媛県','愛媛県'],['高知県','高知県'],['福岡県','福岡県'],['佐賀県','佐賀県'],['長崎県','長崎県'],['熊本県','熊本県'],['大分県','大分県'],['宮崎県','宮崎県'],['鹿児島県','鹿児島県'],['沖縄県','沖縄県']]
             .form-group
               = f.label :発送までの日数
               %span.form-require 必須
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  %select.select-default
-                    = f.select :name,[  ]
+                  = f.select :day,[ ['---',1],['1〜2日で発送','2'],['2〜3日で発送','3'],['4〜7日で発送','4'] ]
         .sell-content.clearfix
           %h3.sub-header 販売価格(300〜9,999,999)
           = link_to '?','/jp/help_center/article/64/',class: 'form-question'
@@ -83,7 +85,8 @@
                   .list-right.price-input
                     .price-mark ¥
                     .price-box
-                      = f.text_field :name,class: 'input-default', placeholder: '例）300'
+                      -# = f.number_field :price,class: 'input-default', placeholder: '例）300'
+                      = f.text_field :price,class: 'input-default', placeholder: '例）300'
               %li.clearfix
                 .list-left 販売手数料(10%)
                 .list-right -
@@ -107,4 +110,6 @@
               = link_to '加盟店規約','/jp/seller_terms/'
               に同意したことになります。
             = f.submit '出品する', class: 'btn-red'
+            = link_to '#' do
+              もどる
             = f.submit 'もどる', class: 'btn-grey'
