addressテーブルに入力した値を保存できるようにした

--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -67,5 +67,5 @@
                 %span.question ?
                 カード裏面の番号とは？
           .form-buttom-content.default-content 
-            =link_to "#", class: "add-btn" do
+            =link_to user_cards_path,method: :post, class: "add-btn" do
               追加する
