ユーザー登録後、ユーザーログイン状態に編集

--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -4,5 +4,4 @@
     .logout-content
       .inner-content
         .button-content
-          =link_to "#", class: "logout-content" do
-            ログアウト
+          =link_to 'ログアウト','/users/sign_out',method: :delete, class: "logout-content"
