不要なファイル削除とビューの修正

--- a/app/views/signup/phone.html.haml
+++ b/app/views/signup/phone.html.haml
@@ -15,6 +15,6 @@
 
               
             .actions.btn-next
-              = f.submit "SMSを送信する", :class=>"btn-default btn-red"
+              = f.submit "SMSを送信する", class: "btn-default btn-red"
               %p.l-single-text 電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
     = render partial: "shared/sub_footer"
