--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -4,4 +4,4 @@
     .logout-content
       .inner-content
         .button-content
-          =link_to 'ログアウト','/users/sign_out',method: :delete, class: "logout-content"
+          =link_to 'ログアウト',destroy_user_session_path,method: :delete, class: "logout-content"
