--- a/app/views/users/signup.html.haml
+++ b/app/views/users/signup.html.haml
@@ -6,7 +6,7 @@
         %h2.l-single-head.registration 新規会員登録
         .login-form-inner
           .l-single-content
-            = link_to 'メールアドレスで登録する',step1_signup_index_path,class: 'btn-default btn-mail'
+            = link_to 'メールアドレスで登録する',member_signup_index_path,class: 'btn-default btn-mail'
             %button#facebook-login.btn-default.btn-sns.btn-sns-facebook
               %i.fab.fa-facebook-f
               Facebookでログイン
