--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -14,8 +14,6 @@
                 .uploud-dropbox
                   = picture.label :name
                   = picture.file_field :name, multiple: true, name: 'pictures[name][]'
-                  -# = picture.file_field :name
-                  -# = picture.hidden_field :id, value: picture.object.id
                   %br/
                   %pre.visible-pc ドラッグアンドドロップまたはクリックしてファイルをアップロード
         .sell-content.clearfix
@@ -39,14 +37,13 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :category_id,[ ['---',1],['レディース','2'],['メンズ','3'] ]
+                  = f.select :category_id,[ ['---','1'],['レディース','2'],['メンズ','3'] ]
             .form-group
               = f.label :商品の状態
               %span.form-require 必須
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  -# = f.select :status ,["---","新品、未使用","未使用に近い","目立った傷や汚れなし","やや傷や汚れあり","傷や汚れあり","全体的に状態が悪い"]
                   = f.select :status,[ ['---',1],['新品、未使用','1'],['未使用に近い','2'],['目立った傷や汚れなし','3'],['やや傷や汚れあり','4'],['傷や汚れあり','5'],['全体的に状態が悪い','6'] ]
         .sell-content.clearfix
           %h3.sub-header 配送について
@@ -65,7 +62,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :location,[ ['---','---'],['北海道','北海道'],['青森県','青森県'],['岩手県','岩手県'],['宮城県','宮城県'],['秋田県','秋田県'],['山形県','山形県'],['福島県','福島県'],['茨城県','茨城県'],['栃木県','栃木県'],['群馬県','群馬県'],['埼玉県','埼玉県'],['千葉県','千葉県'],['東京都','東京都'],['神奈川県','神奈川県'],['新潟県','新潟県'],['富山県','富山県'],['石川県','石川県'],['福井県','福井県'],['山梨県','山梨県'],['長野県','長野県'],['岐阜県','岐阜県'],['静岡県','静岡県'],['愛知県','愛知県'],['三重県','三重県'],['滋賀県','滋賀県'],['京都府','京都府'],['大阪府','大阪府'],['兵庫県','兵庫県'],['奈良県','奈良県'],['和歌山県','和歌山県'],['鳥取県','鳥取県'],['島根県','島根県'],['岡山県','岡山県'],['広島県','広島県'],['山口県','山口県'],['徳島県','徳島県'],['香川県','香川県'],['愛媛県','愛媛県'],['高知県','高知県'],['福岡県','福岡県'],['佐賀県','佐賀県'],['長崎県','長崎県'],['熊本県','熊本県'],['大分県','大分県'],['宮崎県','宮崎県'],['鹿児島県','鹿児島県'],['沖縄県','沖縄県']]
+                  = f.collection_select :prefecture_id, Prefecture.all, :id, :name
             .form-group
               = f.label :発送までの日数
               %span.form-require 必須
@@ -87,8 +84,8 @@
                   .list-right.price-input
                     .price-mark ¥
                     .price-box
-                      -# = f.number_field :price,class: 'input-default', placeholder: '例）300'
-                      = f.text_field :price,class: 'input-default', placeholder: '例）300'
+                      = f.number_field :price,class: 'input-default', placeholder: '例）300'
+                      -# = f.text_field :price,class: 'input-default', placeholder: '例）300'
               %li.clearfix
                 .list-left 販売手数料(10%)
                 .list-right -
