--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -84,16 +84,15 @@
                   .list-right.price-input
                     .price-mark ¥
                     .price-box
-                      = f.number_field :price,class: 'input-default', placeholder: '例）300'
+                      -# = f.number_field :price,class: 'input-default', placeholder: '例）300'
                       -# 現段階でどちらを使用するか判断付きかねるため一旦コメントアウト
-                      -# = f.text_field :price,class: 'input-default', placeholder: '例）300'
+                      = f.text_field :price,class: 'input-default', placeholder: '例）300'
               %li.clearfix
                 .list-left 販売手数料(10%)
-                .list-right -
+                .list-right-fee -
               %li.clearfix.bold
                 .list-left 販売利益
-                .list-right -
-
+                .list-right-profit -
         .sell-content.clearfix
           .sell-content__warning
             %p
