--- a/app/assets/stylesheets/modules/_items-new.scss
+++ b/app/assets/stylesheets/modules/_items-new.scss
@@ -48,7 +48,9 @@
               text-align: center;
               cursor: pointer;
               .uploud-dropfile {
-                display: none;
+                width: 100%;
+                height: 100%;
+                // display: none;
               }
               pre {
                 position: absolute;
