--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -12,10 +12,9 @@
               .uploud-container__have-items 
               = f.fields_for :pictures do |picture|
                 .uploud-dropbox
-                  = picture.label :name
-                  = picture.file_field :name, multiple: true, name: 'pictures[name][]'
-                  %br/
                   %pre.visible-pc ドラッグアンドドロップまたはクリックしてファイルをアップロード
+                  = picture.label :name
+                  = picture.file_field :name, accept: ".jpg, .jpeg, .png", multiple: true, name: 'pictures[name][]', class: "uploud-dropfile", 'data-image': 0
         .sell-content.clearfix
           .form-group.first-box
             = f.label :商品名
@@ -37,7 +36,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :category_id,[ ['---','1'],['レディース','2'],['メンズ','3'] ]
+                  = f.collection_select :category_id, Category.all, :id, :name, :prompt => "---"
             .form-group
               = f.label :商品の状態
               %span.form-require 必須
@@ -62,7 +61,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.collection_select :prefecture_id, Prefecture.all, :id, :name
+                  = f.collection_select :prefecture_id, Prefecture.all, :id, :name, :prompt => '---'
             .form-group
               = f.label :発送までの日数
               %span.form-require 必須
