edit view in creditcard registration

--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -139,8 +139,8 @@
           }
         }
       }
-      .add-btn {
-        display: block;
+      .add-btn {  
+        width: 100%;
         margin-bottom: 8px;
         background-color: $main-red;
         font-size: 14px;
