--- a/app/views/signup/member.html.haml
+++ b/app/views/signup/member.html.haml
@@ -52,8 +52,10 @@
               %br/
               = f.text_field  :birthday
             %p.form-info-text ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
-            %p.l-single-text.text-center「次へ進む」のボタンを押すことにより、利用規約に同意したものとみなします
+            = recaptcha_tags
 
+            %p.l-single-text.text-center「次へ進む」のボタンを押すことにより、利用規約に同意したものとみなします
+            
             .actions.btn-next
               = f.submit "次へ進む", :class=>"btn-default btn-red"
           
