index画面画像修正

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,6 +1,6 @@
 .main
   .top-image
-    %img.top-image2{:alt => "", :src => "top_image.jpg"}/
+    %img.top-image2{:alt => "", :src => "/top_image.jpg"}/
   .popular
     %h2.category
       人気のカテゴリー
@@ -119,4 +119,4 @@
             = render partial: 'shared/content', locals:{item: item}
 
   %aside.sumaho
-    %img.bottom__image1{:alt => "", :src => "top_aside.png"}/
+    %img.bottom__image1{:alt => "", :src => "/top_aside.png"}/
