--- a/app/assets/stylesheets/modules/_items-new.scss
+++ b/app/assets/stylesheets/modules/_items-new.scss
@@ -36,12 +36,10 @@
               }
             }
             .uploud-dropbox {
-              float: right;
-              width: 83%;
-              margin-right: 10px;
-              padding: 40px;
+              float: center;
+              width: 100%;
               position: relative;
-              min-height: 100px;
+              min-height: 150px;
               background: #f5f5f5;
               border: 1px dashed #ccc;
               font-size: 0;
@@ -49,7 +47,8 @@
               cursor: pointer;
               .uploud-dropfile {
                 width: 100%;
-                height: 100%;
+                height: 150px;
+                opacity: 0;
               }
               pre {
                 position: absolute;
