--- a/app/assets/stylesheets/modules/_items-new.scss
+++ b/app/assets/stylesheets/modules/_items-new.scss
@@ -244,4 +244,11 @@
       }
     }
   }
+  #delivery_label{
+    margin: 40px 10px 0 0;
+  }
+  #delivery_require{
+    margin: 40px 0 0; 
+    position: absolute;
+  }
 }
