--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -43,7 +43,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :status,[ ['---',1],['新品、未使用','1'],['未使用に近い','2'],['目立った傷や汚れなし','3'],['やや傷や汚れあり','4'],['傷や汚れあり','5'],['全体的に状態が悪い','6'] ]
+                  = f.select :status,[ ['新品、未使用','1'],['未使用に近い','2'],['目立った傷や汚れなし','3'],['やや傷や汚れあり','4'],['傷や汚れあり','5'],['全体的に状態が悪い','6'] ], {:prompt => '---'}
         .sell-content.clearfix
           %h3.sub-header 配送について
           = link_to '?','/jp/help_center/article/68/',class: 'form-question'
@@ -54,7 +54,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :responsibility,[ ['---',1],['送料込み（出品者負担）','2'],['着払い負担（購入者負担）','3'] ]
+                  = f.select :responsibility, [ ['送料込み（出品者負担）','1'],['着払い負担（購入者負担）','2'] ]
             .form-group
               = f.label :配送元の地域
               %span.form-require 必須
@@ -68,7 +68,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :day,[ ['---',1],['1〜2日で発送','2'],['2〜3日で発送','3'],['4〜7日で発送','4'] ]
+                  = f.select :day,[['1〜2日で発送','1'],['2〜3日で発送','2'],['4〜7日で発送','3']], {:prompt => '---'}
         .sell-content.clearfix
           %h3.sub-header 販売価格(300〜9,999,999)
           = link_to '?','/jp/help_center/article/64/',class: 'form-question'
