--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -26,7 +26,7 @@
             = f.label :商品の説明
             %span.form-require 必須
             %br/
-            = f.text_field :description, class: 'input-default', placeholder: '例）シャネル'.html_safe
+            = f.text_field :description, class: 'input-default', placeholder: '商品の説明（必須1,000文字）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。'.html_safe
         .sell-content.clearfix
           %h3.sub-header 商品の詳細
           .form-box
@@ -43,7 +43,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :size,[ ['XXS(以下)','XXS(以下)'],['XS(SS)','XS(SS)'],['S','S'],['M','M'],['L','L'],['XL(LL)','XL(LL)'], ['2XL(3L)','2XL(3L)'], ['3XL(4L)','3XL(4L)'], ['4XL(5L)以上','4XL(5L)以上'], ['FREE SIZE','FREE SIZE'] ], {:prompt => '---'}
+                  = f.select :size, Item.sizes.keys, {:prompt => "---"}
             .form-group
               = f.label :ブランド
               %span.form-require 任意
@@ -57,7 +57,7 @@
               .select-box
                 .select-wrap
                   = fa_icon 'chevron-down',class:'icon'
-                  = f.select :status,[ ['新品、未使用','新品、未使用'],['未使用に近い','未使用に近い'],['目立った傷や汚れなし','目立った傷や汚れなし'],['やや傷や汚れあり','やや傷や汚れあり'],['傷や汚れあり','傷や汚れあり'],['全体的に状態が悪い','全体的に状態が悪い'] ], {:prompt => '---'}
+                  = f.select :status, Item.statuses.keys, {:prompt => "---"}
         .sell-content.clearfix
           %h3.sub-header 配送について
           = link_to '?','/jp/help_center/article/68/',class: 'form-question'
