--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -9,7 +9,7 @@
             %h3 クレジットカード一覧
         %section.card-index-inner__middle
           .content
-            =link_to "#", class: "content__btn" do
+            =link_to new_user_card_path, class: "content__btn" do
               =fa_icon 'credit-card', class: 'content__btn__icon'
               クレジットカードを追加する
         .card-index-inner__bottom
