--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -42,7 +42,7 @@
                 = fa_icon 'check', class: "o_icon-gray"
                 %span やることリスト
             %li
-              = link_to "#" do
+              = link_to user_path(current_user) do
                 -# %img.mypage-icon{:alt => "", :src => "https://static.mercdn.net/images/member_photo_noimage_thumb.png"}/
                 .header-bottom__right--image 
                 %span マイページ
