--- a/app/views/shared/_content.html.haml
+++ b/app/views/shared/_content.html.haml
@@ -1,5 +1,5 @@
 .box__contents__content
-  %a.contentlink
+  = link_to root_path,method: :get,class: "contentlink" do
     %figure.figure
       %figcaption
         %span
