--- a/app/views/shared/_mypage-side-manu.html.haml
+++ b/app/views/shared/_mypage-side-manu.html.haml
@@ -2,7 +2,7 @@
   %nav.mypage__side__navs
     %ul.mypage__side__nav
       %li
-        = link_to "#", class: "mypage__side__nav__list active" do
+        = link_to user_path(current_user), class: "mypage__side__nav__list active" do
           マイページ
           = fa_icon 'chevron-right', class: 'side__arrow__right active'      
       %li
@@ -70,11 +70,15 @@
     %h3.mypage__side__nav__head 設定
     %ul.mypage__side__nav
       %li
+        = link_to profile_user_path(current_user), class: "mypage__side__nav__list" do
+          プロフィール
+          = fa_icon 'chevron-right', class: 'side__arrow__right'
+      %li
         = link_to "#", class: "mypage__side__nav__list" do
           発送元・お届け先住所変更
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        = link_to "#", class: "mypage__side__nav__list" do
+        = link_to user_cards_path(current_user), class: "mypage__side__nav__list" do
           支払い方法
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
@@ -82,7 +86,7 @@
           メール/パスワード
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        = link_to "#", class: "mypage__side__nav__list" do
+        = link_to information_user_path(current_user), class: "mypage__side__nav__list" do
           本人情報
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
@@ -90,6 +94,6 @@
           電話番号の確認
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        = link_to "#", class: "mypage__side__nav__list" do
+        = link_to logout_user_path(current_user), class: "mypage__side__nav__list" do
           ログアウト
           = fa_icon 'chevron-right', class: 'side__arrow__right'
