--- a/app/assets/stylesheets/modules/_items-show.scss
+++ b/app/assets/stylesheets/modules/_items-show.scss
@@ -5,8 +5,8 @@
   background: #f5f5f5;
 }
 .item-box-container{
-  height: 1300px;
-  padding: 24px 40px 40px;
+  height: 100%;
+  padding: 24px 40px 80px;
   background: #fff;
   margin: 40px auto 0;
   width: 700px;
@@ -17,6 +17,8 @@
   box-sizing: inherit;
   font-family: 'Source Sans Pro', Helvetica , Arial, 'æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“', 'YuGothic', 'ãƒ¡ã‚¤ãƒªã‚ª', 'Meiryo', sans-serif;
   -webkit-box-sizing: inherit;
+  table-layout: fixed;
+  word-wrap: break-word;
 }
 
 .item-name{
@@ -50,29 +52,33 @@
   box-sizing: inherit;
   border-style: solid;
   border-width: 0;
+  .owl-carousel.owl-loaded.owl-drag{
+    height: 370px;
+    position: relative;
+    background-repeat: no-repeat;
+    margin: 0;
+    padding: 0;
+    .owl-stage-outer{
+      width: 300px;
+      height: 300px;
+      .owl-item{
+        width: 300px;
+        .owl-item-inner.is-higher-height{
+          height: 100%;
+          position: relative;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
-.owl-carousel.owl-loaded.owl-drag{
-  height: 370px;
-  position: relative;
-  background-repeat: no-repeat;
-  margin: 0;
-  padding: 0;
-}
 
-.owl-stage-outer{
-  width: 300px;
-  height: 300px;
-}
 
-.owl-item{
-  width: 300px;
-}
-.owl-item-inner.is-higher-height{
-  height: 300px;
-  position: relative;
-  width: 100%;
-}
+
+
+
+
 
 
 
@@ -347,7 +353,22 @@ i.icon-good{
   -webkit-transition: all ease-out .3s;
   transition: all ease-out .3s;
 }
-
+.item-delete-btn{
+  width: 780px;
+  margin: auto;
+  font-size: 24px;
+  line-height: 60px;
+  display: block;
+  margin-top: 16px;
+  background: #ea352d;
+  font-size: 14px;
+  color: #fff;
+  line-height: 56px;
+  text-align: center;
+  font-weight: 600;
+  -webkit-transition: all ease-out .3s;
+  transition: all ease-out .3s;
+}
 .item-description {
   padding: 32px 0 0;
   line-height: 1.5;
