SNS認証でユーザー登録できる状態

--- a/app/views/signup/member.html.haml
+++ b/app/views/signup/member.html.haml
@@ -15,21 +15,21 @@
               = f.label :メールアドレス
               %spna.form-require 必須
               %br/
-              = f.email_field :email, autofocus: true, autocomplete: "email"
-            .field
-              = f.label :パスワード
-              %spna.form-require 必須
-              - if @minimum_password_length
-                %em
-                  (#{@minimum_password_length} characters minimum)
-              %br/
-              = f.password_field :password, autocomplete: "new-password"
-            .field
-              = f.label :パスワード確認
-              %spna.form-require 必須
-              %br/
-              = f.password_field :password_confirmation, autocomplete: "new-password"
-
+              = f.email_field :email, autofocus: true, autocomplete: "email",value: session[:email]
+            -if session[:uid].nil?
+              .field
+                = f.label :パスワード
+                %spna.form-require 必須
+                - if @minimum_password_length
+                  %em
+                    (#{@minimum_password_length} characters minimum)
+                %br/
+                = f.password_field :password,required:"required"
+              .field
+                = f.label :パスワード確認
+                %spna.form-require 必須
+                %br/
+                = f.password_field :password_confirmation,required:"required"
             .field
               %h3 本人確認
               %p.l-single-text 安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
@@ -38,8 +38,7 @@
               = f.label :お名前全角
               %spna.form-require 必須
               %br/
-              = f.text_field :name
-
+              = f.text_field :name, value: session[:name]
             .field
               = f.label :お名前カナ
               %spna.form-require 必須
