--- a/app/views/users/signup.html.haml
+++ b/app/views/users/signup.html.haml
@@ -7,12 +7,12 @@
         .login-form-inner
           .l-single-content
             = link_to 'メールアドレスで登録する',member_signup_index_path,class: 'btn-default btn-mail'
-            %button#facebook-login.btn-default.btn-sns.btn-sns-facebook
-              %i.fab.fa-facebook-f
+            = link_to user_facebook_omniauth_authorize_path,method: :post, id:'#facebook-login', class: 'btn-default btn-sns btn-sns-facebook' do
+              =fa_icon 'facebook-square',class:'icon'
               Facebookでログイン
-            %button#google-login.btn-default.btn-sns.btn-sns-google
-              %i.fab.fa-facebook-f
-              Googleでログイン
+            = link_to user_google_oauth2_omniauth_authorize_path,id:'#google-login',method: :post, class: 'btn-default btn-sns.btn-sns-google' do
+              =image_tag '/google.svg'
+            Googleでログイン
 
 
               
