--- a/app/assets/stylesheets/modules/_purchase_confirmation.scss
+++ b/app/assets/stylesheets/modules/_purchase_confirmation.scss
@@ -73,6 +73,7 @@
           .payment {
             display: table;
             border-collapse: collapse;
+            margin-bottom: 30px;
             width: 100%;
             &__buy {
               border: 0;
