ビューの修正

--- a/app/views/users/signup.html.haml
+++ b/app/views/users/signup.html.haml
@@ -10,9 +10,9 @@
             = link_to user_facebook_omniauth_authorize_path,method: :post, id:'#facebook-login', class: 'btn-default btn-sns btn-sns-facebook' do
               =fa_icon 'facebook-square',class:'icon'
               Facebookでログイン
-            = link_to user_google_oauth2_omniauth_authorize_path,id:'#google-login',method: :post, class: 'btn-default btn-sns.btn-sns-google' do
-              =image_tag '/google.svg'
-            Googleでログイン
+            = link_to user_google_oauth2_omniauth_authorize_path,id:'#google-login',method: :post, class: 'btn-default btn-sns btn-sns-google' do
+              Googleでログイン
+  
 
 
               
