--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -43,14 +43,18 @@
 .login-form-inner {
   padding: 32px 64px;
   border-top: 1px solid #eee;
+
   .btn-sns-facebook {
     margin: 16px 0 0;
     background: #385185;
     color: #fff;
+    .icon{
+
+    }
   }
   .btn-sns-google {
     margin: 16px 0 0;
-    background: #fff no-repeat 3px top;
+    background: #fff url('/google.svg') no-repeat 3px top;
     border: #979797 solid 1px;
     color: #333;
   }
@@ -65,6 +69,15 @@
   }
   .login-submit {
     margin: 24px 0 0;
+  }
+  .btn-sns {
+    position: relative;
+    i {
+      position: absolute;
+      top: 25%;
+      left: 16px;
+      font-size: 26px;
+    }
   }
 }
 .single-footer {
