--- a/app/views/signup/member.html.haml
+++ b/app/views/signup/member.html.haml
@@ -10,12 +10,12 @@
               = f.label :ニックネーム
               %spna.form-require 必須
               %br/
-              = f.text_field :nickname 
+              = f.text_field :nickname,autofocus: true
             .field
               = f.label :メールアドレス
               %spna.form-require 必須
               %br/
-              = f.email_field :email, autofocus: true, autocomplete: "email"
+              = f.email_field :email, autocomplete: "email"
             -if @omniauth.nil?
               .field
                 = f.label :パスワード
