商品編集一旦コミットp

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,4 +22,4 @@
 @import "modules/mypage_user_transactions";
 @import "modules/mypage_side_menu";
 @import "modules/information";
-
+@import "modules/item-edit";
