--- a/app/assets/stylesheets/modules/_item-edit.scss
+++ b/app/assets/stylesheets/modules/_item-edit.scss
@@ -8,7 +8,7 @@
         padding: 32px 16px;
         font-size: 22px;
       } 
-      .new_item,.edit_item {
+      .new_item {
         select {
           -webkit-appearance: none;
         }
