--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -1,3 +1,5 @@
+- breadcrumb :profile
+= render 'shared/breadcrumbs'
 %main.main__contents
   = render "/shared/mypage-side-manu"
   .main__contents__contents
