--- a/app/assets/stylesheets/modules/_information.scss
+++ b/app/assets/stylesheets/modules/_information.scss
@@ -31,10 +31,6 @@
           label {
             font-weight: 600;
           }
-          select {
-            width: 100%;
-            -webkit-appearance: none;
-          }
           .input-default {
             box-sizing: border-box;
             width: 100%;
@@ -46,24 +42,13 @@
             background-color: $white;
             line-height: 1.5;
             font-size: 16px;
-          }
+          }                  
           .select-default {
             position: relative;
-            z-index: 2;
-            height: 48px;
-            padding: 0 16px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            background: 0;
-            font-size: 16px;
-            line-height: 1.5;
-            cursor: pointer;
-          }
-          &__select-wrap {
             margin: 8px 0 0;
             position: relative;
-            background-color: $white;
-            &__icon {
+            background: #fff;
+            .icon {
               position: absolute;
               right: 16px;
               top: 50%;
@@ -71,7 +56,23 @@
               color: #888;
               font-size: 8px;
             }
-          }
+            select {
+              width: 100%;
+              height: 100%;
+              background-color: $white;
+              -webkit-appearance: none;
+              position: relative;
+              z-index: 2;
+              height: 48px;
+              padding: 0 16px;
+              border-radius: 4px;
+              border: 1px solid #ccc;
+              background: 0;
+              font-size: 16px;
+              line-height: 1.5;
+              cursor: pointer;
+            }
+          } 
         }
         .btn-default {
           display: block;
