--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -69,24 +69,30 @@
             %td
               =link_to "https://www.mercari.com/jp/brand/539/",class: "" do
                 %div
-                  コーチ
+                = @item.brand
           %tr
             %th 商品の状態
-            %td 新品、未使用
+            %td 
+              = @item.status
           %tr
             %th 配送料の負担
-            %td 送料込み(出品者負担)
+            %td 
+              = @item.delivery.parent.responsibility
+              -# = @item.category.parent.parent.name
           %tr
             %th 配送の方法
-            %td らくらくメルカリ便
+            %td 
+              = @item.delivery.responsibility
           %tr
             %th 配送元地域
             %td
               =link_to "https://www.mercari.com/jp/brand/539/",class: "" do
-                埼玉県
+                -# = @item.prefecture_id.name
+                = Prefecture.find(@item.prefecture_id)[:name]
           %tr
             %th 発送日の目安
-            %td 1~2日で発送
+            %td 
+              = @item.day
 
 
 
