--- a/app/assets/stylesheets/modules/_item-edit.scss
+++ b/app/assets/stylesheets/modules/_item-edit.scss
@@ -49,6 +49,11 @@
                 width: 100%;
                 height: 150px;
                 opacity: 0;
+                .delete_btm {
+                  width: 30px;
+                  height: 30px;
+                  background-color: aqua;
+                }
               }
               pre {
                 position: absolute;
