--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -7,17 +7,24 @@
           %h3.uploud-header 出品画像
           %span.form-require 必須
           %p 最大10枚までアップロードできます
-          .dropbox-container.clearfix
-            .uploud-container
-              .uploud-container__have-items 
-                .uploud-dropbox
-                  %pre.visible-pc ドラッグアンドドロップまたはクリックしてファイルをアップロード
-                  = f.fields_for :pictures do |picture| 
-                    = picture.file_field :name, multiple: true, name: 'pictures[name][]', class: "uploud-dropfile", 'data-image': 0
-                    .image_up_box
-                      = image_tag(picture.object.name.url)
-                    .delete_btm_box
-                      = link_to '削除', picture_destroy_user_item_path, method: :delete, class: "delete_btm"
+          = f.fields_for :update_pictures do |picture|
+            .dropzone-container.clearfix
+              #preview
+              .dropzone-area
+                = picture.label :name, class: "dropzone-box", for: "upload-image" do
+                  .input_area
+                    %pre
+                      :preserve
+                        ドラッグアンドドロップまたは
+                        クリックしてファイルをアップロード
+                    = picture.file_field :name, multiple: true, name: 'pictures[name][]', id: "upload-image", class: "upload-image", 'data-image': 0
+          -# .dropbox-container.clearfix
+          -#   .uploud-container
+          -#     .uploud-container__have-items 
+          -#       .uploud-dropbox
+          -#         %pre.visible-pc ドラッグアンドドロップまたはクリックしてファイルをアップロード
+          -#         = f.fields_for :pictures do |picture| 
+          -#           = picture.file_field :name, multiple: true, name: 'pictures[name][]', class: "uploud-dropfile", 'data-image': 0
         .sell-content.clearfix
           .form-group.first-box
             = f.label :商品名
