テストコード記述（出品）

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,3 +4,9 @@ $light-blue:rgb(0,149,238);
 $main-red: #ea352b;
 $facebook-color: #385185;
 $light-black: rgba(0,0,0,0.4);
+$side_blue_dark: #253141;
+$side_blue_light: #2f3e51;
+$light_blue: #38AEF0;
+$light_gray: #999;
+$black: #434a54;
+$alert_orange: #F35500;
