--- a/app/views/shared/_content.html.haml
+++ b/app/views/shared/_content.html.haml
@@ -1,5 +1,5 @@
 .box__contents__content
-  = link_to user_items_path(item,item.id),method: :get,class: "contentlink" do
+  = link_to user_item_path(item.id),method: :get,class: "contentlink" do
     %figure.figure
       %figcaption
         %span
