ログインしていない状態で出品ボタンを押した場合ログイン画面へ飛ぶように修正

--- a/app/views/shared/_sell-btn.html.haml
+++ b/app/views/shared/_sell-btn.html.haml
@@ -1,4 +1,10 @@
-= link_to '#',class:'sell-btn' do
-  .sell-btn__word 出品
-  = fa_icon 'camera',class:'sell-btn__icon'
+-if user_signed_in?
+  = link_to  new_user_item_path(current_user.id),class:'sell-btn' do
+    .sell-btn__word 出品
+    = fa_icon 'camera',class:'sell-btn__icon'
+- else
+  = link_to new_user_session_path,class:'sell-btn' do
+    .sell-btn__word 出品
+    = fa_icon 'camera',class:'sell-btn__icon'
+  
   
